<resources>
    <string name="app_name">JustJava</string>
    <string name="name_entry">Enter your Name!</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="thank_you">Thank You!</string>
</resources>
