<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.bwkrayb.justjava.MainActivity">

        <EditText
            android:id="@+id/name_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:hint="@string/name_entry"/>

        <TextView
            android:text="@string/toppings"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:paddingLeft="24dp"
            android:textSize="16dp"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"
            android:layout_marginTop="16dp"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/quantity"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>


        <TextView
            android:id="@+id/price"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/order_summary"
            style="@style/HeaderTextStyle"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="$0"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:padding="0dp"
            android:text="order" />

    </LinearLayout>
</ScrollView>